Fix logo stretch error

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -96,7 +96,7 @@
 }
 
 /* Tablets */
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   .sp_container {
     flex-direction: column-reverse;
     justify-content: center;
